[gd_scene load_steps=2 format=3 uid="uid://bwege8qxc6m6u"]

[ext_resource type="Script" uid="uid://qrsn2yn11fm" path="res://Escenas/Interface/pausa.gd" id="1_wk6u8"]

[node name="Pausa" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wk6u8")

[node name="Menu" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_direction = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 514.0
offset_top = 273.5
offset_right = 638.0
offset_bottom = 374.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ColorRect" type="ColorRect" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 1, 1, 1)

[node name="Reanudar" type="Button" parent="Menu/VBoxContainer/ColorRect"]
layout_mode = 2
offset_top = 4.0
offset_right = 124.0
offset_bottom = 35.0
text = "Reanudar"

[node name="Menu Principal" type="Button" parent="Menu/VBoxContainer/ColorRect"]
layout_mode = 2
offset_top = 35.0
offset_right = 124.0
offset_bottom = 66.0
text = "Menu Principal
"

[node name="Salir" type="Button" parent="Menu/VBoxContainer/ColorRect"]
layout_mode = 2
offset_top = 70.0
offset_right = 124.0
offset_bottom = 101.0
text = "Salir
"

[connection signal="pressed" from="Menu/VBoxContainer/ColorRect/Reanudar" to="." method="_on_reanudar_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ColorRect/Menu Principal" to="." method="_on_menu_principal_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/ColorRect/Salir" to="." method="_on_salir_pressed"]
